# IT_AUTOMOTIVE

./: NCKHSV2018CLC_BaoCao_Template.docx  NCKHSV2018_SelfDrivingCar.docx  README.md
Example_Tutorial/: testOpenNi.py
JetsonTX1_RCHammer/: detectSign.py  deviationFromContour.py  deviationFromSobel.py  deviationRC.py  run.py  runNew.py  runThread.py  runThreadNew.py  runWithPipe.py
JetsonTX2_RCHammer/: NiViewer  PS1080Console  detectSign.py  global_lane.py  run.py  runNew.py  runThread.py  runWithPipe_CUOCDUASO.py  saveCamera.py
Lane_detection_sobel/: main.py
PCB_Schematic/: Backup Of TK1_Shield_small_2.0mm.pdsbak  Backup Of TK1_Shield_small_2.0mm_datmach.pdsbak  Backup Of TX1_Shield.pdsbak  Backup Of TX1_Shield_Datmach.pdsbak  Backup Of TX1_Shield_Ui.pdsbak  Last Loaded TK1_Shield_small_2.0mm.pdsbak  Last Loaded TK1_Shield_small_2.0mm_datmach.pdsbak  Last Loaded TX1_Shield.pdsbak  Last Loaded TX1_Shield_Datmach.pdsbak  Last Loaded TX1_Shield_Ui.pdsbak  TK1_Shield_small_2.0mm.pdsprj  TK1_Shield_small_2.0mm.pdsprj.ANH-KHOA.Anh Khoa.workspace  TK1_Shield_small_2.0mm_datmach.pdsprj  TX1_Shield.pdsprj.ANH-KHOA.Anh Khoa.workspace  TX1_Shield_Datmach.pdsprj  TX1_Shield_Datmach.pdsprj.ANH-KHOA.Anh Khoa.workspace  TX1_Shield_Ui.pdsprj  TX1_Shield_Ui.pdsprj.ANH-KHOA.Anh Khoa.workspace
TX1_DRIVER/: JETSON_GPIO.py  PCA9685.py  PCA9685_old.py  TestGPIO.py  driver_Lib.py  (+2 more)
TX2_driver_in_C++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
TX2_driver_in_C++/include/: JHPWMPCA9685.h  Sign_regconize.h~  jetsonGPIO.h
TX2_driver_in_C++/src/: testGPIOandMOTOR.cpp
(+31 files in other folders)
